cmake_minimum_required(VERSION 3.13)
project(Overload)

set(CMAKE_CXX_STANDARD 17)

set(OVERLOAD_CMAKE_DIR "${CMAKE_SOURCE_DIR}/../../cmake")
set(OVERLOAD_BUILD_DIR "${CMAKE_SOURCE_DIR}/../../Build")
set(OVERLOAD_RESOURCES_DIR "${CMAKE_SOURCE_DIR}/../../Resources")
set(OVERLOAD_BUILD on)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Out")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Out")

include(${OVERLOAD_CMAKE_DIR}/glew.cmake)
include(${OVERLOAD_CMAKE_DIR}/assimp.cmake)
include(${OVERLOAD_CMAKE_DIR}/stb_image.cmake)
include(${OVERLOAD_CMAKE_DIR}/glfw.cmake)
include(${OVERLOAD_CMAKE_DIR}/bullet3.cmake)
include(${OVERLOAD_CMAKE_DIR}/irrKlang.cmake)
include(${OVERLOAD_CMAKE_DIR}/lua.cmake)
include(${OVERLOAD_CMAKE_DIR}/Utils.cmake)

add_subdirectory(OvAnalytics)
add_subdirectory(OvAudio)
add_subdirectory(OvCore)
add_subdirectory(OvDebug)
add_subdirectory(OvMaths)
add_subdirectory(OvPhysics)
add_subdirectory(OvRendering)
add_subdirectory(OvTools)
add_subdirectory(OvUI)
add_subdirectory(OvWindowing)
add_subdirectory(OvEditor)
add_subdirectory(OvGame)