cmake_minimum_required(VERSION 3.13)
project(Overload)

set(CMAKE_CXX_STANDARD 17)

set(OVERLOAD_CMAKE_DIR "${CMAKE_SOURCE_DIR}/../../cmake")
set(OVERLOAD_BUILD_DIR "${CMAKE_SOURCE_DIR}/../../Build")
set(OVERLOAD_RESOURCES_DIR "${CMAKE_SOURCE_DIR}/../../Resources")
set(OVERLOAD_BUILD on)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Out")

include(${OVERLOAD_CMAKE_DIR}/glew.cmake)
include(${OVERLOAD_CMAKE_DIR}/assimp.cmake)
include(${OVERLOAD_CMAKE_DIR}/stb_image.cmake)
include(${OVERLOAD_CMAKE_DIR}/glfw.cmake)
include(${OVERLOAD_CMAKE_DIR}/bullet3.cmake)
include(${OVERLOAD_CMAKE_DIR}/irrKlang.cmake)
include(${OVERLOAD_CMAKE_DIR}/lua.cmake)
include(${OVERLOAD_CMAKE_DIR}/Utils.cmake)

add_subdirectory(OvAnalytics)
add_subdirectory(OvAudio)
add_subdirectory(OvCore)
add_subdirectory(OvDebug)
add_subdirectory(OvMaths)
add_subdirectory(OvPhysics)
add_subdirectory(OvRendering)
add_subdirectory(OvTools)
add_subdirectory(OvUI)
add_subdirectory(OvWindowing)
add_subdirectory(OvEditor)
add_subdirectory(OvGame)

# Install OvEditor
install(DIRECTORY								DESTINATION ${OVERLOAD_BUILD_DIR})
install(TARGETS OvAnalytics OvAudio OvCore OvDebug OvEditor OvMaths OvPhysics OvRendering OvTools OvUI OvWindowing RUNTIME DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES ${GLEW_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES ${ASSIMP_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES ${LUA_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES ${IRRKLANG_DLLS}					DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES ${GLFW_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR})
install(FILES OvEditor/layout.ini				DESTINATION ${OVERLOAD_BUILD_DIR}/Config)
install(DIRECTORY ${OVERLOAD_RESOURCES_DIR}/	DESTINATION ${OVERLOAD_BUILD_DIR}/Data)

#Install OvGame
install(DIRECTORY								DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(TARGETS OvAnalytics OvAudio OvCore OvDebug OvGame OvMaths OvPhysics OvRendering OvTools OvUI OvWindowing RUNTIME DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(FILES ${GLEW_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(FILES ${ASSIMP_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(FILES ${LUA_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(FILES ${IRRKLANG_DLLS}					DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)
install(FILES ${GLFW_DLL}						DESTINATION ${OVERLOAD_BUILD_DIR}/Builder/Development)